--- a/404.html
+++ b/404.html
@@ -11,39 +11,9 @@ verbosity: 2
 {% include comment_handler.html comment_message=comment_message %}
 {% endcomment %}
 
-{% comment %}
-{% assign navigation_pages = site.html_pages | sort:"navigation_weight" %}
-<nav class=menu><ul><div class=container><section id=nav_loop><ul>
-{% for p in navigation_pages %}
-  {% if p.navigation_weight %}
-{% capture comment_message %}
-    # Navigation_weight: {{p.navigation_weight}}
-{% endcapture %}
-{% include comment_handler.html comment_message=comment_message %}
-    {% for i in p %}
-      {% unless i.content %}
-{% capture comment_message %}
-        # Loop iteration: {{forloop.index0}}
-        # Found info {{i | strip_html | truncatewords: 5}}
-{% endcapture %}
-{% include comment_handler.html comment_message=comment_message %}
-      {% endunless %}
-    {% endfor %}
-{% capture comment_message %}
-    Calling {% raw %}{% include nav_mklink.html page_link=p.url link_format='list unordered' %}{% endraw %}
-    with {{p.url}} for "page_link" and 'list unordered' for "link_format"
-{% endcapture %}
-{% include comment_handler.html comment_message=comment_message %}
-    {% include nav_mklink.html page_link=p.url link_format='list unordered' %}
-  {% endif %}
-{% endfor %}
-</ul></section></div></ul><nav>
-{% endcomment %}
-
-
-{% assign gh_pages_test_url = site.github.url %}
-{% if gh_pages_test_url %}
-  {% include nav_mklink.html page_title='Link to issues code' page_link=gh_pages_test_url link_format='unordered' %}
+{% assign gh_pages_issues_url = site.github.url %}
+{% if gh_pages_issues_url %}
+  {% include nav_mklink.html page_title='Link to issues code' page_link=gh_pages_issues_url link_format='unordered' %}
 {% else %}
   <br>Could not read {% raw %}{{gh_pages_test_url}}{% endraw%}</br>
 {% endif %}
@@ -53,6 +23,8 @@ verbosity: 2
 {% endcapture %}
 {% include comment_handler.html comment_message=comment_message %}
 
+
+{% assign fallback_issues_url = site.baseurl %}
 {% if jekyll.environment == 'production' %}
   <h1><li>
     <a href="{{gh_pages_issues_url}}" class="btn">Open an Issue</a>
